src/test/ui/suggestions/type-ascription-instead-of-path.rs
fn main() {
    std:io::stdin();
    //~^ ERROR failed to resolve: use of undeclared type or module `io`
    //~| ERROR expected value, found module
}
